<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_arrow"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VEHICLE"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="65dp"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/custom_input_table"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:layout_width="89dp"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/motor" />

        <EditText
            android:id="@+id/namaPengguna"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:paddingStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/nama_pengguna"
            android:textColorHint="#9EA6A9"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/custom_input_table2"
            android:backgroundTint="@color/white"
            android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/platNomor"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:paddingStart="15dp"
            android:hint="@string/plat_nomor"
            android:textColorHint="#9EA6A9"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/custom_input_table2"
            android:backgroundTint="@color/white"
            android:selectAllOnFocus="true"/>

        <Button
            android:id="@+id/fotoWajah"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_input_table3"
            android:backgroundTint="@color/white"
            android:enabled="true"
            android:text="@string/foto_wajah"/>

        <Button
            android:id="@+id/fotoStnk"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input_table3"
            android:backgroundTint="@color/white"
            android:enabled="true"
            android:text="@string/stnk"/>

        <Button
            android:id="@+id/submitData"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Sumbit Data"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input_table"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_homeic"
                android:layout_marginLeft="30dp"
                android:background="@color/material_on_surface_disabled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/home2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_repeat"
                android:background="@color/material_on_surface_disabled"
                app:layout_constraintLeft_toRightOf="@+id/home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/home3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/home3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user_circle"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/material_on_surface_disabled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>