<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue">

        <ImageButton
            android:id="@id/back"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_arrow"
            android:layout_gravity="center_vertical"
            android:background="@color/blue"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face_photos"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="65dp"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/custom_input_table"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menubar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ava"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_user_circle" />
        <Button
            android:id="@+id/foto_wajah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/custom_input_table3"
            android:backgroundTint="@color/white"
            android:enabled="true"
            android:text="@string/add_face_photos"/>

        <Button
            android:id="@+id/gallery_wajah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/custom_input_table3"
            android:backgroundTint="@color/white"
            android:enabled="true"
            android:text="Galerry Photos"/>

        <EditText
            android:id="@+id/nama"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:enabled="true"
            android:hint="@string/full_name"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <Button
            android:id="@+id/SubmitWajah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/custom_input_table3"
            android:backgroundTint="@color/blue"
            android:enabled="true"
            android:text="@string/SubmitFoto"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menubar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input_table"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@color/material_on_surface_disabled"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_homeic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/home2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/material_on_surface_disabled"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_repeat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/home"
                app:layout_constraintRight_toLeftOf="@id/home3"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/home3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@color/material_on_surface_disabled"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_user_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>