<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:background="@color/blue">

    <!-- Logo Secure Parking -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="111dp"
        android:layout_height="111dp"
        android:src="@drawable/logo1"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Background Secure Parking -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="487dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/bck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email design -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailtxt">

        <EditText
            android:id="@+id/inputemail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingStart="15dp"
            android:hint="@string/prompt_email"
            android:background="@drawable/custom_input_table2"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Username design -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/passwordtxt"
        app:layout_constraintTop_toBottomOf="@id/usernametxt">

        <EditText
            android:id="@+id/inputuname"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingStart="15dp"
            android:hint="@string/Username"
            android:background="@drawable/custom_input_table2"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernametxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/uname"
        app:layout_constraintTop_toBottomOf="@id/email">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password design -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordtxt">

        <EditText
            android:id="@+id/inputpassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingStart="15dp"
            android:hint="@string/prompt_password"
            android:background="@drawable/custom_input_table2"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/uname">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:background="@color/white"
        android:enabled="true"
        android:text="sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>